--- a/app/src/main/res/layout/item_home_spendings.xml
+++ b/app/src/main/res/layout/item_home_spendings.xml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          android:id="@+id/spendings_value"
-          android:layout_width="120dp"
-          android:layout_height="100dp"
-          android:layout_margin="12dp"
-          android:layout_gravity="center_vertical"
-          android:background="@android:color/holo_red_dark"
-          android:gravity="center"
-          android:textSize="30sp"
-          tools:text="201">
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/spendings_value"
+    android:layout_width="120dp"
+    android:layout_height="100dp"
+    android:gravity="center"
+    app:cardBackgroundColor="@color/colorPrimary"
+    app:cardCornerRadius="5dp"
+    app:cardPreventCornerOverlap="true"
+    app:cardUseCompatPadding="true"
+    app:contentPadding="4dp">
 
-</TextView>
+    <TextView
+        android:id="@+id/spendings_card_value"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:textSize="45sp"
+        android:textColor="@color/colorText"
+        tools:text="101$"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_gravity="bottom"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/spendings_card_change_icon"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:src="@drawable/ic_trending_up_black_18dp"/>
+
+        <TextView
+            android:id="@+id/spendings_card_change_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
+            android:textColor="@color/colorPrimaryText"
+            tools:text="25%"/>
+
+    </LinearLayout>
+
+
+</android.support.v7.widget.CardView>
