--- a/app/src/main/res/layout/item_home_transaction_recent.xml
+++ b/app/src/main/res/layout/item_home_transaction_recent.xml
@@ -6,14 +6,61 @@
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
+
+    <ImageView
+        android:id="@+id/itemTransactionIcon"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:color/darker_gray"/>
+
     <TextView
-        android:id="@+id/transaction_recent_title"
+        android:id="@+id/itemTransactionName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@+id/itemTransactionIcon"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="blabla"/>
+        tools:text="Transaction"/>
+
+    <TextView
+        android:id="@+id/itemTransactionValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="- 207.83 $"/>
+
+    <TextView
+        android:id="@+id/itemTransactionDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:textColor="@color/colorSecondaryText"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/itemTransactionIcon"
+        app:layout_constraintTop_toBottomOf="@+id/itemTransactionName"
+        tools:text="12 października"/>
 </android.support.constraint.ConstraintLayout>
