--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#00BCD4</color>
+    <color name="colorLightPrimary">#B2EBF2</color>
+    <color name="colorPrimaryDark">#0097A7</color>
+    <color name="colorAccent">#9E9E9E</color>
+    <color name="colorPrimaryText">#212121</color>
+    <color name="colorText">#FFFFFF</color>
+    <color name="colorSecondaryText">#757575</color>
+    <color name="colorSeparatorDivider">#BDBDBD</color>
+
+
+    //home view
+    <color name="homeBackground">#FFFFFF</color>
+
+    //transaction view
+    <color name="transactionBackground">#FFFFFF</color>
+
 </resources>
