--- a/app/src/main/res/layout/item_home_transaction_recent.xml
+++ b/app/src/main/res/layout/item_home_transaction_recent.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="50dp">
-
+    android:layout_height="50dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    >
 
     <ImageView
         android:id="@+id/itemTransactionIcon"
@@ -19,7 +22,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:color/darker_gray"/>
+        app:srcCompat="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/itemTransactionName"
@@ -33,7 +36,7 @@
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/itemTransactionIcon"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Transaction"/>
+        tools:text="Transaction" />
 
     <TextView
         android:id="@+id/itemTransactionValue"
@@ -48,7 +51,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="- 207.83 $"/>
+        tools:text="- 207.83 $" />
 
     <TextView
         android:id="@+id/itemTransactionDate"
@@ -62,5 +65,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/itemTransactionIcon"
         app:layout_constraintTop_toBottomOf="@+id/itemTransactionName"
-        tools:text="12 października"/>
+        tools:text="12 października" />
 </android.support.constraint.ConstraintLayout>
