--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,93 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/homeBackground"
-    android:orientation="vertical"
-    tools:context="com.akarbowy.spendingsapp.MainActivity">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/homeBackground"
+              android:orientation="vertical"
+              tools:context="com.akarbowy.spendingsapp.MainActivity">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/home_periods"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginTop="16dp">
 
         <TextView
-            android:id="@+id/period_item_title"
+            android:id="@+id/period_title"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="This month"
             android:textColor="@color/colorPrimaryText"
             android:textSize="25sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="This month" />
+            tools:text="This month"/>
 
         <ImageView
+            android:id="@+id/period_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/period_item_title"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />
+            app:layout_constraintBottom_toBottomOf="@id/period_title"
+            app:layout_constraintStart_toEndOf="@id/period_title"
+            app:layout_constraintTop_toTopOf="@id/period_title"
+            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"/>
 
         <android.support.constraint.Group
             android:id="@+id/group"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:visibility="gone"
-            app:constraint_referenced_ids="period_from,gap,period_to" />
+            android:visibility="visible"
+            app:constraint_referenced_ids="period_from,gap,period_to"/>
 
         <TextView
             android:id="@+id/period_from"
             android:layout_width="90dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/home_period_border"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
+            android:background="@drawable/home_period_box"
             android:gravity="center"
+            android:enabled="false"
             android:text="20.12.2017"
+            android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/gap"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/period_title"/>
 
         <TextView
             android:id="@+id/gap"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginRight="4dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:gravity="center"
             android:text="-"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/period_to"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintBottom_toBottomOf="@id/period_from"
+            app:layout_constraintStart_toEndOf="@id/period_from"
+            app:layout_constraintTop_toTopOf="@id/period_from"/>
 
         <TextView
             android:id="@+id/period_to"
             android:layout_width="90dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
-            android:background="@drawable/home_period_border"
+            android:background="@drawable/home_period_box"
+            android:enabled="true"
             android:gravity="center"
             android:text="10.11.2017"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textColor="@color/colorPrimaryDark"
+            app:layout_constraintBottom_toBottomOf="@id/gap"
+            app:layout_constraintLeft_toRightOf="@id/gap"
+            app:layout_constraintTop_toTopOf="@id/gap"
+            />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -96,12 +100,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorSeparatorDivider" />
+        android:background="@color/colorSeparatorDivider"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -119,7 +123,7 @@
             android:text="@string/home_label_recent"
             android:textColor="@color/colorPrimaryText"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/home_add"
@@ -130,17 +134,17 @@
             android:text="@string/home_label_add"
             android:textColor="@color/colorText"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
     </FrameLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorSeparatorDivider" />
+        android:background="@color/colorSeparatorDivider"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
