--- a/app/src/main/res/layout/home_spinner_dropdown.xml
+++ b/app/src/main/res/layout/home_spinner_dropdown.xml
@@ -7,7 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
-        android:id="@+id/period_item_title"
+        android:id="@+id/period_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
