--- a/app/src/main/res/layout/home_spinner_view.xml
+++ b/app/src/main/res/layout/home_spinner_view.xml
@@ -7,7 +7,7 @@
 
 
     <TextView
-        android:id="@+id/period_item_title"
+        android:id="@+id/period_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
