--- a/app/src/main/res/layout/transaction_currency_item.xml
+++ b/app/src/main/res/layout/transaction_currency_item.xml
@@ -7,6 +7,7 @@
     android:gravity="center"
     android:textColor="@color/colorPrimaryText"
     android:textSize="30sp"
-    tools:text="#">
+    android:background="?attr/selectableItemBackground"
+    tools:text="PLN">
 
 </TextView>
