--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -14,44 +14,6 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/transaction_field_hint_title"
-                android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
-                android:privateImeOptions="nm"
-                android:text="@string/transaction_field_default_title" />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/transaction_fields_date_value"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:hint="@string/transaction_field_hint_date"
-                tools:text="Aug, 28 2017" />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/transaction_field_hint_category"
-                android:text="@string/transaction_field_default_category" />
-        </android.support.design.widget.TextInputLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -68,10 +30,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/transaction_field_hint_value"
-                    android:inputType="numberSigned"
-                    android:text="@string/transaction_field_default_value"
-                    android:textSize="25sp" />
+                    android:inputType="numberDecimal"
+                    android:textSize="25sp"
+                    tools:text="@string/transaction_field_default_value" />
             </android.support.design.widget.TextInputLayout>
+
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="0dp"
@@ -82,13 +45,65 @@
                     android:id="@+id/transaction_fields_currency_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:clickable="false"
+                    android:cursorVisible="false"
+
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:hint="@string/transaction_field_hint_currency"
-                    android:text="£"
-                    android:textSize="25sp" />
+                    android:text=" "
+                    android:textSize="25sp"
+                    tools:text="£" />
             </android.support.design.widget.TextInputLayout>
+
         </LinearLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/transaction_fields_category_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="@string/transaction_field_hint_category"
+                tools:text="@string/transaction_field_default_category" />
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/transaction_fields_date_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:cursorVisible="false"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:hint="@string/transaction_field_hint_date"
+                android:text=" "
+                tools:text="Aug, 28 2017" />
+        </android.support.design.widget.TextInputLayout>
+
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/transaction_field_hint_title"
+                android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
+                android:privateImeOptions="nm"
+                android:text="@string/transaction_field_default_title" />
+        </android.support.design.widget.TextInputLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -105,7 +120,7 @@
             android:layout_margin="2dp"
             android:layout_weight="0.3"
             android:background="@color/colorText"
-            android:text="@string/transaction_button_delete"
+            android:text="@string/transaction_actions_button_delete"
             android:textColor="@color/colorPrimary"
             android:textSize="18sp"
             android:visibility="visible" />
@@ -123,7 +138,7 @@
             android:layout_weight="0.6"
             android:background="@drawable/transaction_button_save"
             android:enabled="true"
-            android:text="@string/transaction_button_save"
+            android:text="@string/transaction_actions_button_save"
             android:textColor="@color/colorText"
             android:textSize="18sp" />
     </LinearLayout>
