--- a/app/src/main/res/layout/transaction_category_item.xml
+++ b/app/src/main/res/layout/transaction_category_item.xml
@@ -17,7 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_category_black_24dp" />
+        tools:srcCompat="@drawable/ic_category_transportation_tube" />
 
     <TextView
         android:id="@+id/item_title"
