--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,27 +16,19 @@
 
         <TextView
             android:id="@+id/period_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:ellipsize="middle"
+            android:singleLine="true"
             android:textColor="@color/colorPrimaryText"
             android:textSize="25sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="This month"/>
-
-        <ImageView
-            android:id="@+id/period_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="@id/period_title"
-            app:layout_constraintStart_toEndOf="@id/period_title"
-            app:layout_constraintTop_toTopOf="@id/period_title"
-            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"/>
+            tools:text="This month  &#x25BC;"/>
 
         <android.support.constraint.Group
             android:id="@+id/group"
@@ -50,11 +42,11 @@
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:background="@drawable/home_period_box"
-            android:gravity="center"
             android:enabled="false"
+            android:gravity="center"
             android:text="20.12.2017"
             android:textColor="@color/colorPrimaryDark"
             app:layout_constraintBottom_toBottomOf="parent"
