--- a/app/src/main/res/layout/activity_transaction.xml
+++ b/app/src/main/res/layout/activity_transaction.xml
@@ -27,6 +27,7 @@
                 android:layout_weight="0.7">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/transaction_fields_value_value"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/transaction_field_hint_value"
@@ -47,10 +48,10 @@
                     android:layout_height="wrap_content"
                     android:clickable="false"
                     android:cursorVisible="false"
-
                     android:focusable="false"
                     android:focusableInTouchMode="false"
                     android:hint="@string/transaction_field_hint_currency"
+                    android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
                     android:text=" "
                     android:textSize="25sp"
                     tools:text="£" />
@@ -86,6 +87,7 @@
                 android:focusable="false"
                 android:focusableInTouchMode="false"
                 android:hint="@string/transaction_field_hint_date"
+                android:inputType="none"
                 android:text=" "
                 tools:text="Aug, 28 2017" />
         </android.support.design.widget.TextInputLayout>
@@ -96,12 +98,13 @@
             android:layout_height="wrap_content">
 
             <android.support.design.widget.TextInputEditText
+                android:id="@+id/transaction_fields_name_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/transaction_field_hint_title"
                 android:inputType="textNoSuggestions|textFilter|textVisiblePassword"
                 android:privateImeOptions="nm"
-                android:text="@string/transaction_field_default_title" />
+                tools:text="@string/transaction_field_default_title" />
         </android.support.design.widget.TextInputLayout>
 
     </LinearLayout>
