--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
 
     //common
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 
     //home view
     <color name="homeBackground">#FFFFFF</color>
