--- a/app/src/main/res/drawable/home_period_box.xml
+++ b/app/src/main/res/drawable/home_period_box.xml
@@ -19,7 +19,7 @@
             <solid android:color="@color/white"/>
             <stroke
                 android:width="1dp"
-                android:color="@color/colorPrimaryDark"/>
+                android:color="@color/colorSeparatorDivider"/>
             <corners android:radius="2dp"/>
             <padding
                 android:bottom="4dp"
