[#5] Import data from external sources - Revolut

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,27 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/homeBackground"
-    android:orientation="vertical"
-    tools:context="com.akarbowy.spendingsapp.MainActivity">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/homeBackground"
+              android:orientation="vertical"
+              tools:context="com.akarbowy.spendingsapp.MainActivity">
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginBottom="-24dp">
+
+        <ImageView
+            android:id="@+id/home_import"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_import_export"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+    </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="16dp">
+        android:layout_marginBottom="8dp">
 
         <TextView
             android:id="@+id/period_title"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:ellipsize="middle"
             android:gravity="center_horizontal"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
             android:singleLine="true"
             android:textColor="@color/colorPrimaryText"
             android:textSize="26sp"
@@ -29,14 +46,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="This month  &#x25BE;" />
+            tools:text="This month  &#x25BE;"/>
 
         <android.support.constraint.Group
             android:id="@+id/group"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:visibility="visible"
-            app:constraint_referenced_ids="period_from,gap,period_to" />
+            app:constraint_referenced_ids="period_from,gap,period_to"/>
 
         <TextView
             android:id="@+id/period_from"
@@ -52,7 +69,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@id/gap"
             app:layout_constraintTop_toBottomOf="@id/period_title"
-            tools:text="20.12.2017" />
+            tools:text="20.12.2017"/>
 
         <TextView
             android:id="@+id/gap"
@@ -64,7 +81,7 @@
             app:layout_constraintBottom_toBottomOf="@id/period_from"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/period_from" />
+            app:layout_constraintTop_toTopOf="@id/period_from"/>
 
         <TextView
             android:id="@+id/period_to"
@@ -81,7 +98,7 @@
             app:layout_constraintBottom_toBottomOf="@id/gap"
             app:layout_constraintLeft_toRightOf="@id/gap"
             app:layout_constraintTop_toTopOf="@id/gap"
-            tools:text="10.11.2017" />
+            tools:text="10.11.2017"/>
     </android.support.constraint.ConstraintLayout>
 
     <android.support.v7.widget.RecyclerView
@@ -89,15 +106,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        tools:visibility="gone" />
+        tools:visibility="gone"/>
 
-    <include layout="@layout/home_empty_state_period_spendings" />
+    <include layout="@layout/home_empty_state_period_spendings"/>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="16dp"
-        android:background="@color/colorSeparatorDivider" />
+        android:background="@color/colorSeparatorDivider"/>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -115,7 +132,7 @@
             android:text="@string/home_label_recent"
             android:textColor="@color/colorPrimaryText"
             android:textSize="20sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <Button
             android:id="@+id/home_add"
@@ -126,13 +143,13 @@
             android:text="@string/home_label_add"
             android:textColor="@color/colorText"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
     </FrameLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorSeparatorDivider" />
+        android:background="@color/colorSeparatorDivider"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recent_list"
@@ -140,6 +157,6 @@
         android:layout_height="match_parent"
         tools:visibility="gone"/>
 
-    <include layout="@layout/home_empty_state_recent" />
+    <include layout="@layout/home_empty_state_recent"/>
 
 </LinearLayout>
